2013-12-26  Murray Stokely  <murray@FreeBSD.org>

	* NAMESPACE: Add missing export for .DollarNames
	  EnumValueDescriptor to allow completion on that class.
	* R/00classes.R: Update FileDescriptor '$' dispatch to work
	  properly for the names of fields defined in the FileDescriptor,
	  instead of just returning NULL even for types returned by $
	  completion.

2013-12-23  Murray Stokely  <murray@FreeBSD.org>

	* DESCRIPTION (Version): increment.
	* inst/proto/addressbook.proto: Reserved extension fields in
	  tutorial.Person.
	* vignettes/RProtoBuf-intro.Rnw (subsection{Extensions}): Added a
	  new section documenting protocol buffer extensions.

2013-12-20  Murray Stokely  <murray@FreeBSD.org>

	* R/00classes.R: Correct a bug that incorrectly dispatched
	  as.character() when as.list() was called on Descriptor objects.

2013-12-18  Murray Stokely  <murray@FreeBSD.org>

	* R/completion.R (.DollarNames.EnumValueDescriptor): Add
	  $-completion for EnumValueDescriptor and FileDescriptor classes
	  as with other S4 RProtoBuf classes here.
	* R/00classes.R (P): Ensure that the FileDescriptor $name() method
	  accepts a boolean for full paths just like the generic name()
	  method.
	* R/wrapper_EnumDescriptor.R: Add better error checking.  Expect
	  exceptions if wrong types are provided for arguments rather than
	  just returning NULL.

2013-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RProtoBuf-intro.Rnw: Use with vignette builder
	* vignettes/RProtoBuf-quickref.Rnw: Idem
	* vignettes/RProtoBuf-unitTests.Rnw: Rewritten / simplified

	* DESCRIPTION: Increased dependency to R (>= 3.0.0)

	* configure.in: No longer create vignettes/Makefile

2013-12-17  Murray Stokely  <murray@FreeBSD.org>

	* R/completion.R (.DollarNames.Message): Add missing methods to
	  dollar completion list for Message and Descriptor objects
	* vignettes/RProtoBuf/RProtoBuf.Rnw (subsection{messages}): Add
	  missing methods to Table 2 (Messages) and add a table and new